--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,17 @@
 
 <h1> Prepared in 2024 </h1>
 
+[251] 
+Ionut-Vlad Modoranu, Mher Safaryan, Grigory Malinovsky, Eldar Kurtic, Thomas Robert, Peter Richtárik, and Dan Alistarh<br>
+<b>MicroAdam: Accurate adaptive optimization with low space overhead and provable convergence</b><br>
+<span class="important">LLM Paper</span><br>   
+[<a href="https://arxiv.org/abs/2405.15593">arXiv</a>] [code: MicroAdam] <br><br> 
+
+[250] 
+Alexander Tyurin, Kaja Gruntkowska, and Peter Richtárik<br>
+<b>Freya PAGE: First optimal time complexity for large-scale nonconvex finite-sum optimization with heterogeneous asynchronous computations</b><br>
+<span class="important">LLM Paper</span><br>   
+[<a href="https://arxiv.org/abs/2405.15545">arXiv</a>] [code: Freya PAGE, Freya SGD] <br><br> 
 
 [249] 
 Vladimir Malinovskii, Denis Mazur, Ivan Ilin, Denis Kuznedelev, Konstantin Burlachenko, Kai Yi, Dan Alistarh, and Peter Richtárik<br>
