2 more neurips24 submissions

--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,16 @@
 
 <h1> Prepared in 2024 </h1>
 
+[253] 
+Peter Richtárik, Simone Maria Giancola, Dymitr Lubczyk, and Robin Yadav<br>
+<b>Local curvature descent: squeezing more curvature out of standard and Polyak gradient descent</b><br>
+[<a href="https://arxiv.org/abs/2405.16574">arXiv</a>] [code: LCD1, LCD2, LCD3] <br><br> 
+
+[252] 
+Alexander Tyurin and Peter Richtárik<br>
+<b>On the optimal time complexities in decentralized stochastic asynchronous optimization</b><br>
+[<a href="https://arxiv.org/abs/2405.16218">arXiv</a>] [code: FragileSGD] <br><br> 
+
 [251] 
 Ionut-Vlad Modoranu, Mher Safaryan, Grigory Malinovsky, Eldar Kurtic, Thomas Robert, Peter Richtárik, and Dan Alistarh<br>
 <b>MicroAdam: Accurate adaptive optimization with low space overhead and provable convergence</b><br>
