--- a/i_papers.html
+++ b/i_papers.html
@@ -58,6 +58,7 @@ Peter Richtárik, Simone Maria Giancola, Dymitr Lubczyk, and Robin Yadav<br>
 [252] 
 Alexander Tyurin and Peter Richtárik<br>
 <b>On the optimal time complexities in decentralized stochastic asynchronous optimization</b><br>
+<span class="important">Asynchronous Optimization</span><br> 
 [<a href="https://arxiv.org/abs/2405.16218">arXiv</a>] [code: FragileSGD] <br><br> 
 
 [251] 
@@ -69,7 +70,7 @@ Ionut-Vlad Modoranu, Mher Safaryan, Grigory Malinovsky, Eldar Kurtic, Thomas Rob
 [250] 
 Alexander Tyurin, Kaja Gruntkowska, and Peter Richtárik<br>
 <b>Freya PAGE: First optimal time complexity for large-scale nonconvex finite-sum optimization with heterogeneous asynchronous computations</b><br>
-<span class="important">LLM Paper</span><br>   
+<span class="important">Asynchronous Optimization</span><br>   
 [<a href="https://arxiv.org/abs/2405.15545">arXiv</a>] [code: Freya PAGE, Freya SGD] <br><br> 
 
 [249] 
@@ -115,7 +116,7 @@ Kaja Gruntkowska, Alexander Tyurin, and Peter Richtárik<br>
 [242] 
 Alexander Tyurin, Marta Pozzi, Ivan Ilin, and Peter Richtárik<br>
 <b>Shadowheart SGD: Distributed asynchronous SGD with optimal time complexity under arbitrary computation and communication heterogeneity</b><br>
-<span class="important">Federated Learning Paper</span><br>          
+<span class="important">Asynchronous Optimization</span><br>         
 [<a href="https://arxiv.org/abs/2402.04785">arXiv</a>] [code: Shadowheart SGD] <br><br> 
 
 [241] 
@@ -190,7 +191,7 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
 <br> <br> 
     
 [231] Eduard Gorbunov, Abdurakhmon Sadiev, Marina Danilova, Samuel Horváth, Gauthier Gidel, Pavel Dvurechensky, Alexander Gasnikov, and Peter Richtárik<br>          
-          <b>High-probability convergence for composite and distributed stochastic minimization and variational inequalities with heavy-tailed noise</b> <br>
+<b>High-probability convergence for composite and distributed stochastic minimization and variational inequalities with heavy-tailed noise</b> <br>
  	 41st International Conference on Machine Learning (ICML 2024)<br>          
           [<a href="https://arxiv.org/abs/2310.01860">arXiv</a>]    [code: DProx-clipped-SGD-shift, DProx-clipped-SSTM-shift]       
 <br> <br> 
@@ -255,6 +256,7 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
           [221] Alexander Tyurin and Peter Richtárik<br>
           <b>Optimal time complexities of parallel stochastic optimization methods under a fixed computation model</b><br>
           <a href="https://openreview.net/forum?id=B4xF1wfQnF">Advances in Neural Information Processing Systems 36 (NeurIPS 2023)</a> <br>
+          <span class="important">Asynchronous Optimization</span><br>    
           [<a href="https://arxiv.org/abs/2305.12387">arXiv</a>] [code: Rennala SGD, Malenia SGD] <br>
           <br>            
 
