--- a/i_papers.html
+++ b/i_papers.html
@@ -59,7 +59,7 @@ Peter Richtárik, Simone Maria Giancola, Dymitr Lubczyk, and Robin Yadav<br>
 Alexander Tyurin and Peter Richtárik<br>
 <b>On the optimal time complexities in decentralized stochastic asynchronous optimization</b><br>
 <span class="important">Asynchronous Optimization</span><br> 
-[<a href="https://arxiv.org/abs/2405.16218">arXiv</a>] [code: FragileSGD] <br><br> 
+[<a href="https://arxiv.org/abs/2405.16218">arXiv</a>] [code: Fragile SGD, Amelie SGD] <br><br> 
 
 [251] 
 Ionut-Vlad Modoranu, Mher Safaryan, Grigory Malinovsky, Eldar Kurtic, Thomas Robert, Peter Richtárik, and Dan Alistarh<br>
