--- a/i_papers.html
+++ b/i_papers.html
@@ -50,16 +50,21 @@
 
 <h1> Prepared in 2024 </h1>
 
-[253] 
+[254] 
 Peter Richtárik, Simone Maria Giancola, Dymitr Lubczyk, and Robin Yadav<br>
 <b>Local curvature descent: squeezing more curvature out of standard and Polyak gradient descent</b><br>
 [<a href="https://arxiv.org/abs/2405.16574">arXiv</a>] [code: LCD1, LCD2, LCD3] <br><br> 
 
-[252] 
+[253] 
 Alexander Tyurin and Peter Richtárik<br>
 <b>On the optimal time complexities in decentralized stochastic asynchronous optimization</b><br>
 <span class="important">Asynchronous Optimization</span><br> 
 [<a href="https://arxiv.org/abs/2405.16218">arXiv</a>] [code: Fragile SGD, Amelie SGD] <br><br> 
+
+[252] 
+Peter Richtárik, Abdurakhmon Sadiev, and Yury Demidovich<br>
+<b>A unified theory of stochastic proximal point methods without smoothness</b><br>  
+[<a href="https://arxiv.org/abs/2405.15941">arXiv</a>] [code: MicroAdam] <br><br> 
 
 [251] 
 Ionut-Vlad Modoranu, Mher Safaryan, Grigory Malinovsky, Eldar Kurtic, Thomas Robert, Peter Richtárik, and Dan Alistarh<br>
