--- a/index.html
+++ b/index.html
@@ -91,6 +91,30 @@ Abstract: <i> We consider the decentralized stochastic asynchronous optimization
 
 
 
+
+<h3>May 24, 2024</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2405.15941">
+"A Unified Theory of Stochastic Proximal Point Methods without Smoothness"</a> -
+joint work with Abdurakhmon Sadiev and Yury Demidovich.
+<br>
+<br>
+  
+Abstract: <i> This paper presents a comprehensive analysis of a broad range of variations of the stochastic proximal point method (SPPM). Proximal point methods have attracted considerable interest owing to their numerical stability and robustness against imperfect tuning, a trait not shared by the dominant stochastic gradient descent (SGD) algorithm. A framework of assumptions that we introduce encompasses methods employing techniques such as variance reduction and arbitrary sampling. A cornerstone of our general theoretical approach is a parametric assumption on the iterates, correction and control vectors. We establish a single theorem that ensures linear convergence under this assumption and the $\mu$-strong convexity of the loss function, and without the need to invoke smoothness. This integral theorem reinstates best known complexity and convergence guarantees for several existing methods which demonstrates the robustness of our approach. We expand our study by developing three new variants of SPPM, and through numerical experiments we elucidate various properties inherent to them. </i>
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
 <h3>May 24, 2024</h3>
 
 <h1>New Paper</h1>
