--- a/i_papers.html
+++ b/i_papers.html
@@ -51,8 +51,8 @@
 <h1> Prepared in 2024 </h1>
 
 [256] 
-SPAM: Stochastic proximal point method with momentum variance reduction for non-convex cross-device federated learning<br>
-<b>A simple linear convergence analysis of the Point-SAGA algorithm</b><br>
+<br> Avetik Karagulyan, Egor Shulgin, Abdurakhmon Sadiev, and Peter Richtárik<br>
+<b>SPAM: Stochastic proximal point method with momentum variance reduction for non-convex cross-device federated learning</b><br>
 [<a href="https://arxiv.org/abs/2405.20127">arXiv</a>] [method: SPAM] <br><br> 
 
 [255] 
