--- a/index.html
+++ b/index.html
@@ -42,6 +42,74 @@
       </ul>
       <div id="wrapper" class="main">
         <div id="content">
+
+
+<h3>May 30, 2024</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2405.20127">
+"SPAM: Stochastic Proximal Point Method with Momentum Variance Reduction for Non-convex Cross-Device Federated Learning"</a> -
+joint work with Avetik Karagulyan, Egor Shulgin, and Abdurakhmon Sadiev.
+ <br>
+ <br>
+  
+Abstract: <i>PCross-device training is a crucial subfield of federated learning, where the number of clients can reach into the billions. Standard approaches and local methods are prone to issues such as client drift and insensitivity to data similarities. We propose a novel algorithm (SPAM) for cross-device federated learning with non-convex losses, which solves both issues. We provide sharp analysis under second-order (Hessian) similarity, a condition satisfied by a variety of machine learning problems in practice. Additionally, we extend our results to the partial participation setting, where a cohort of selected clients communicate with the server at each communication round. Our method is the first in its kind, that does not require the smoothness of the objective and provably benefits from clients having similar data.</i>
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
+<h3>May 30, 2024</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2405.19951">
+"A Simple Linear Convergence Analysis of the Point-SAGA Algorithm"</a> -
+joint work with Laurent Condat.
+ <br>
+ <br>
+  
+Abstract: <i>Point-SAGA is a randomized algorithm for minimizing a sum of convex functions using their proximity operators (proxs), proposed by Defazio (2016). At every iteration, the prox of only one randomly chosen function is called. We generalize the algorithm to any number of prox calls per iteration, not only one, and propose a simple proof of linear convergence when the functions are smooth and strongly convex.</i>
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+<h3>May 30, 2024</h3>
+
+<h1>Lukang Sun Defended his PhD Thesis Today!</h1>
+
+My stellar PhD student  <a href="https://lukangsun.github.io">Lukang Sun</a> defended his PhD thesis <a href="http://hdl.handle.net/10754/698695">Stein Variational Gradient Descent and Consensus-Based Optimization: Towards a Convergence Analysis and Generalization</a> today! 
+
+<br> <br>
+Committee: <a href="https://www.maths.ox.ac.uk/people/jose.carrillodelaplata">Jose Carrillo</a> (math @ Oxford), <a href="https://www.kaust.edu.sa/en/study/faculty/diogo-gomes">Diogo Gomes</a> (math @ KAUST), <a href="https://shao3wangdi.github.io">Di Wang</a> (CS @ KAUST), plus yours truly. 
+
+<br><br> Lukang's next move: postdoc at TUM with <a href="https://www.professoren.tum.de/en/fornasier-massimo">Massimo Fornasier</a>. 
+
+<br> <br>
+Congrats, Lukang!!!
+
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
         
         
 <h3>May 26, 2024</h3>
