--- a/index.html
+++ b/index.html
@@ -44,6 +44,22 @@
         <div id="content">
 
 
+
+<h3>June 1, 2024</h3>
+
+<h1>Talk in Vienna</h1>
+
+I am on my way to Vienna, to attend the <a href="https://www.esi.ac.at/events/e539/">One World Optimization Seminar</a>, held at the Erwin Schrödinger International Institute for Mathematics and Physics. The event is organized by <a href="https://www.mat.univie.ac.at/~rabot/">Radu Ioan Boţ</a> and <a href="https://ymalitsky.com">Yura Malitsky</a>. The event has an excellent lineup of speakers; see the <a href="https://www.esi.ac.at/events/e539/">schedule</a> here. <br>
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
 <h3>May 30, 2024</h3>
 
 <h1>New Paper</h1>
@@ -55,7 +71,7 @@ joint work with Avetik Karagulyan, Egor Shulgin, and Abdurakhmon Sadiev.
  <br>
  <br>
   
-Abstract: <i>PCross-device training is a crucial subfield of federated learning, where the number of clients can reach into the billions. Standard approaches and local methods are prone to issues such as client drift and insensitivity to data similarities. We propose a novel algorithm (SPAM) for cross-device federated learning with non-convex losses, which solves both issues. We provide sharp analysis under second-order (Hessian) similarity, a condition satisfied by a variety of machine learning problems in practice. Additionally, we extend our results to the partial participation setting, where a cohort of selected clients communicate with the server at each communication round. Our method is the first in its kind, that does not require the smoothness of the objective and provably benefits from clients having similar data.</i>
+Abstract: <i>Cross-device training is a crucial subfield of federated learning, where the number of clients can reach into the billions. Standard approaches and local methods are prone to issues such as client drift and insensitivity to data similarities. We propose a novel algorithm (SPAM) for cross-device federated learning with non-convex losses, which solves both issues. We provide sharp analysis under second-order (Hessian) similarity, a condition satisfied by a variety of machine learning problems in practice. Additionally, we extend our results to the partial participation setting, where a cohort of selected clients communicate with the server at each communication round. Our method is the first in its kind, that does not require the smoothness of the objective and provably benefits from clients having similar data.</i>
   
 <br>
 
