--- a/i_papers.html
+++ b/i_papers.html
@@ -53,6 +53,7 @@
 [256] 
 <br> Avetik Karagulyan, Egor Shulgin, Abdurakhmon Sadiev, and Peter Richtárik<br>
 <b>SPAM: Stochastic proximal point method with momentum variance reduction for non-convex cross-device federated learning</b><br>
+<span class="important">Federated Learning Paper</span><br>  
 [<a href="https://arxiv.org/abs/2405.20127">arXiv</a>] [method: SPAM] <br><br> 
 
 [255] 
