--- a/index.html
+++ b/index.html
@@ -51,6 +51,32 @@
 
 I am on my way to Vienna, to attend the <a href="https://www.esi.ac.at/events/e539/">One World Optimization Seminar</a>, held at the Erwin Schrödinger International Institute for Mathematics and Physics. The event is organized by <a href="https://www.mat.univie.ac.at/~rabot/">Radu Ioan Boţ</a> and <a href="https://ymalitsky.com">Yura Malitsky</a>. The event has an excellent lineup of speakers; see the <a href="https://www.esi.ac.at/events/e539/">schedule</a> here. <br>
 <br>
+<a href="https://www.esi.ac.at/events/t1895/">My talk is on Thursday (June 6).</a>
+<br>
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
+<h3>May 31, 2024</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2405.20623">
+"Prune at the Clients, Not the Server: Accelerated Sparse Training in Federated Learning"</a> -
+joint work with Georg Meinhardt, Kai Yi, and Laurent Condat.
+ <br>
+ <br>
+  
+Abstract: <i>In the recent paradigm of Federated Learning (FL), multiple clients train a shared model while keeping their local data private. Resource constraints of clients and communication costs pose major problems for training large models in FL. On the one hand, addressing the resource limitations of the clients, sparse training has proven to be a powerful tool in the centralized setting. On the other hand, communication costs in FL can be addressed by local training, where each client takes multiple gradient steps on its local data. Recent work has shown that local training can provably achieve the optimal accelerated communication complexity [Mishchenko et al., 2022]. Hence, one would like an accelerated sparse training algorithm. In this work we show that naive integration of sparse training and acceleration at the server fails, and how to fix it by letting the clients perform these tasks appropriately. We introduce Sparse-ProxSkip, our method developed for the nonconvex setting, inspired by RandProx [Condat and Richtárik, 2022], which provably combines sparse training and acceleration in the convex setting. We demonstrate the good performance of Sparse-ProxSkip in extensive experiments.</i>
+  
+<br>
 
 <br>
 <br>
