--- a/i_papers.html
+++ b/i_papers.html
@@ -50,8 +50,14 @@
 
 <h1> Prepared in 2024 </h1>
 
+[257] 
+Georg Meinhardt, Kai Yi, Laurent Condat, and Peter Richtárik<br>
+<b>Prune at the clients, not the server: Accelerated sparse training in federated learning</b><br>
+<span class="important">Federated Learning Paper</span><br>  
+[<a href="https://arxiv.org/abs/2405.20623">arXiv</a>] [method: Sparse-ProxSkip] <br><br> 
+
 [256] 
-<br> Avetik Karagulyan, Egor Shulgin, Abdurakhmon Sadiev, and Peter Richtárik<br>
+Avetik Karagulyan, Egor Shulgin, Abdurakhmon Sadiev, and Peter Richtárik<br>
 <b>SPAM: Stochastic proximal point method with momentum variance reduction for non-convex cross-device federated learning</b><br>
 <span class="important">Federated Learning Paper</span><br>  
 [<a href="https://arxiv.org/abs/2405.20127">arXiv</a>] [method: SPAM] <br><br> 
