--- a/index.html
+++ b/index.html
@@ -44,6 +44,40 @@
         <div id="content">
 
 
+<h3>June 3, 2024</h3>
+<h1>Papers Accepted to ICML 2024</h1>
+
+
+<img alt="ICML" src="imgs/ICML_logo.png" height="200">
+<br>
+
+We've had two papers accepted to <a href="https://icml.cc/Conferences/2024">The 41st International Conference on Machine Learning (ICML 2024)</a>:
+
+<br><br>
+Eduard Gorbunov, Abdurakhmon Sadiev, Marina Danilova, Samuel Horváth, Gauthier Gidel, Pavel Dvurechensky, Alexander Gasnikov, and Peter Richtárik<br>
+<b>High-probability convergence for composite and distributed stochastic minimization and variational inequalities with heavy-tailed noise</b>  <br>
+<span class="important">ORAL PAPER</span> <br>
+<a href="https://arxiv.org/abs/2310.01860">[arXiv]</a> 
+
+<br><br>
+Egor Shulgin and Peter Richtárik <br>
+<b>Towards a better theoretical understanding of independent subnetwork training</b> <br>
+<a href="https://arxiv.org/abs/2306.16484">[arXiv]</a> <br>
+<br>
+
+<br>
+
+The conference will take place during July 21-27 in Vienna, Austria.
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 
 <h3>June 1, 2024</h3>
 
@@ -51,8 +85,7 @@
 
 I am on my way to Vienna, to attend the <a href="https://www.esi.ac.at/events/e539/">One World Optimization Seminar</a>, held at the Erwin Schrödinger International Institute for Mathematics and Physics. The event is organized by <a href="https://www.mat.univie.ac.at/~rabot/">Radu Ioan Boţ</a> and <a href="https://ymalitsky.com">Yura Malitsky</a>. The event has an excellent lineup of speakers; see the <a href="https://www.esi.ac.at/events/e539/">schedule</a> here. <br>
 <br>
-<a href="https://www.esi.ac.at/events/t1895/">My talk is on Thursday (June 6).</a>
-<br>
+<a href="https://www.esi.ac.at/events/t1895/">My talk</a> is scheduled for Thursday (June 6).
 <br>
 
 <br>
