2 new interns, 1 new paper on arXiv and more

--- a/index.html
+++ b/index.html
@@ -45,6 +45,30 @@
 
 
 <h3>June 3, 2024</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2406.01115">
+"Cohort Squeeze: Beyond a Single Communication Round per Cohort in Cross-Device Federated Learning"</a> -
+joint work with Kai Yi, Timur Kharisov, Igor Sokolov, and Peter Richtárik.
+ <br>
+ <br>
+  
+Abstract: <i>Virtually all federated learning (FL) methods, including FedAvg, operate in the following manner: i) an orchestrating server sends the current model parameters to a cohort of clients selected via certain rule, ii) these clients then independently perform a local training procedure (e.g., via SGD or Adam) using their own training data, and iii) the resulting models are shipped to the server for aggregation. This process is repeated until a model of suitable quality is found. A notable feature of these methods is that each cohort is involved in a single communication round with the server only. In this work we challenge this algorithmic design primitive and investigate whether it is possible to ``squeeze more juice" out of each cohort than what is possible in a single communication round. Surprisingly, we find that this is indeed the case, and our approach leads to up to 74 percent reduction in the total communication cost needed to train a FL model in the cross-device setting. Our method is based on a novel variant of the stochastic proximal point method (SPPM-AS) which supports a large collection of client sampling procedures some of which lead to further gains when compared to classical client selection approaches.</i>
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
+
+<h3>June 2, 2024</h3>
 <h1>Papers Accepted to ICML 2024</h1>
 
 
