--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,12 @@
 
 <h1> Prepared in 2024 </h1>
 
+[258] 
+Kai Yi, Timur Kharisov, Igor Sokolov, and Peter Richtárik<br>
+<b>Cohort squeeze: Beyond a single communication round per cohort in cross-device federated learning</b><br>
+<span class="important">Federated Learning Paper</span><br>  
+[<a href="https://arxiv.org/abs/2406.01115">arXiv</a>] [method: SPPM-AS] <br><br> 
+
 [257] 
 Georg Meinhardt, Kai Yi, Laurent Condat, and Peter Richtárik<br>
 <b>Prune at the clients, not the server: Accelerated sparse training in federated learning</b><br>
