--- a/i_talks.html
+++ b/i_talks.html
@@ -57,21 +57,6 @@ Tools for AI and Data Science (ALGOPT 2024), Louvain-la-Neuve, Belgium, August 2
 <a href="https://icml.cc/Conferences/2024">ICML</a>, Vienna, Austria, July 21-27, 2024
 </p>
 
-<p>
-Federated Learning for Computer Vision (FedVision) Workshop at CVPR 2024, Seattle, USA, June 17-18, 2024 (keynote talk)
-</p>
-
-<p>
-<a href="https://aaforml.com">Applied Algorithms for Machine Learning. A workshop on the future of computation</a>, Paris, France, June 10-12, 2024 (plenary talk)
-</p>
-
-<p>
-<a href="https://www.esi.ac.at/events/e539/">One World Optimization Seminar in Vienna</a>, Erwin Schrödinger International Institute for Mathematics and Physics, Vienna, Austria, June 3-7, 2024 (invited)
-</p>
-
-
-
-
 
 <!-- <p>
 <a href=verb"http://lsec.cc.ac.cn/~icnonla23/index.html">The 14th International Conference of Numerical Optimization and Numerical Linear Algebra (ICNONLA)</a>, Taiyuan, Shanxi Province, China, August 15-18, 2023 (plenary talk; invited by Ya-xiang Yuan). 
@@ -91,6 +76,22 @@ Federated Learning for Computer Vision (FedVision) Workshop at CVPR 2024, Seattl
 
 
 <h1>2024 Talks</h1>
+
+<p>
+[241]
+<a href="https://fedvision.github.io/fedvision2024/">3rd Workshop on Federated Learning for
+Computer Vision (in Conjunction with CVPR 2024)</a>, Seattle, USA, June 17, 2024 (keynote talk)
+</p>
+
+<p>
+[240]
+<a href="https://aaforml.com">Applied Algorithms for Machine Learning. A workshop on the future of computation</a>, Paris, France, June 10-12, 2024 (plenary talk)
+</p>
+
+<p>
+[239]
+<a href="https://www.esi.ac.at/events/e539/">One World Optimization Seminar in Vienna</a>, Erwin Schrödinger International Institute for Mathematics and Physics, Vienna, Austria, June 3-7, 2024 (plenary talk)
+</p>
 
 <p>
 [238]
@@ -142,7 +143,7 @@ Three 50 min lectures on Optimization for Machine Learning, AMCS-STAT School, KA
 
 <p>
 [229]
-<a href="http://mathconf.sci.am/">Mathematics in Armenia: Advances and Perspectives</a> (80th anniversary of the foundation of the Armenian National Academy of Sciences), Yerevan, Armenia, July 2-8, 2023 (plenary)
+<a href="http://mathconf.sci.am/">Mathematics in Armenia: Advances and Perspectives</a> (80th anniversary of the foundation of the Armenian National Academy of Sciences), Yerevan, Armenia, July 2-8, 2023 (plenary talk)
 </p>
 
 <p>
