--- a/index.html
+++ b/index.html
@@ -43,6 +43,53 @@
       <div id="wrapper" class="main">
         <div id="content">
         
+<h3>June 17, 2024</h3>
+
+<h1>A keynote talk: FedVision @ CVPR 2024</h1>
+
+I giving a keynote talk at the <a href="https://fedvision.github.io/fedvision2024/">Federated Learning for Computer Vision (FedVision) Workshop</a> at <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR 2024</a> today. The conference is held in Seattle, during June 17--21.  <br>
+
+
+<br>
+<br>
+<a href="talks/TALK-2024-06-17-FedVision@CVPR2024-ASYNC.pdf"><img alt="" src="imgs/TALK-2024-06-17-FedVision@CVPR2024-ASYNC-thumb.png" width="500" ></a>
+<br>
+<br> 
+
+<br>
+Here is the presentation <a href="talks/TALK-2024-06-17-FedVision@CVPR2024-ASYNC.pdf">(62 slides)</a> supporting my talk. This is the third time I am giving this talk, each time expanded a bit (40 -> 52 -> 62 slides).<br> 
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
+<h3>June 10, 2024</h3>
+
+<h1>Talk in Paris</h1>
+
+I am attending the <a href="https://aaforml.com">Applied Algorithms for Machine Learning (a workshop on the future of computation)</a>, held during June 10-12 in Paris. The event is organized by some amazing folks from Rice University: Maryam Aliakbarpour, Vladimir Braverman, Ben (Xia) Hu, Nai-Hui Chia,  Anastasios Kyrillidis, Sebastian Perez-Salazar, Anshumali Shrivastava, Arlei Silva and Cesar Uribe. It turn out that Rice happens to have a physical presence in the heart of Paris (Club de la Chasse). <br>
+
+
+<br>
+<br>
+<a href="talks/TALK-2024-06-11-ASYNC-Paris.pdf"><img alt="" src="imgs/TALK-2024-06-11-ASYNC-Paris-thumb.png" width="500" ></a>
+<br>
+<br> 
+
+<br>
+Here are the <a href="talks/TALK-2024-06-11-ASYNC-Paris.pdf">52 slides</a>  from my talk. <br> 
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
         
 <h3>June 6, 2024</h3>
 
@@ -59,7 +106,7 @@ I have given my talk at the <a href="https://www.esi.ac.at/events/e539/">One Wor
 
 
 <br>
-Here are the <a href="talks/TALK-2024-06-06-ASYNC.pdf">slides</a>  from my talk.<br>
+Here are the <a href="talks/TALK-2024-06-06-ASYNC.pdf">40 slides</a> forming my talk. A recording of the talk is also on <a href="https://www.youtube.com/watch?v=OerKXFxijQs">YouTube</a> now.<br> 
 
 <br>
 <br>
